--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
     </div>
     <!-- CONTENT -->
     
-    <ul id="content">
+     <ul id="content">
     <li class="left-content"><strong><span id="lei">Контакты</span></strong><img src="img/for1.png"/>
-        <div><p>Свяжитесь с нами для получения более подробной информации</p><a href="#">VISIT WEBSITE</a> </div>
+        <div><p>Свяжитесь с нами для получения более детальной информации</p><a href="contact.html">Visit</a> </div>
         </li>
         <li class="right-content"><strong><span id="mic">Прайс-Лист</span></strong><img src="img/for2.png"/>
-        <div><p>10th INTERNATIONAL MEETING INDUSTRY AND BUSINESS TRAVEL EXHIBITION & CONFERENCE</p><a href="#">VISIT WEBSITE</a> </div>
+        <div><p></p><a href="price.html">Visit</a> </div>
         </li>
-    <li class="left-content"><strong><span id="lux">OTDYKH LUXURY</span></strong><img src="img/for3.png"/>
-        <div><p>9th INTERNATIONAL TRADE FAIR FOR LUXURY TRAVEL</p><a href="#">VISIT WEBSITE</a> </div></li>
-        <li class="right-content"><strong><span id="heal">OTDYKH SPA & HEALTH</span></strong><img src="img/for4.png"/>
-        <div><p>Pealthy prospects for your Business:OTDYKH SPA & HEALTH<br/> is dedicated to one of the fastest growing segment of the<br/> Russian Travel industry</p><a href="#">VISIT WEBSITE</a> </div>
+    <li class="left-content"><strong><span id="lux">Для Застройщиков</span></strong><img src="img/for3.png"/>
+        <div><p></p><a href="info.html">Visit</a> </div></li>
+        <li class="right-content"><strong><span id="heal">Галлерея</span></strong><img src="img/for4.png"/>
+        <div><p></p><a href="gallery.html">Visit</a></div>
         </li> 
     </ul>
     <footer id="footer">
